--- a/development/index.html
+++ b/development/index.html
@@ -16,6 +16,15 @@
     </section>
     <section>
       <!-- CTA + button -->
+      <div class="call_container">
+        <div class="call_text">
+          <h3>Lorem ipsum dolor sit amet</h3>
+          <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        </div>
+        <div class="call_click">
+          <a href="index.html" class="btn">Lorem ipsum</a>
+        </div>
+      </div>
     </section>
     <section>
       <!-- features -->
