--- a/development/index.html
+++ b/development/index.html
@@ -31,6 +31,14 @@
     </section>
     <section>
       <!-- newsletter -->
+
+      <div class="newsletter">
+        <h3 class="newstext">Lorem ipsum dolor sit amet</h3>
+        <form action="submit">
+          <input type="text" value="">
+          <input class="btn" type="submit" value="lorem">
+        </form>
+      </div>
     </section>
     <section>
       <!-- aobut me -->
