--- a/development/index.html
+++ b/development/index.html
@@ -48,6 +48,39 @@
     </section>
     <footer>
       <!-- copyright -->
+      <div class="footer_container">
+        <div class="footer_text">
+          <h3>Lorem, ipsum dolor</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quod, sunt! Ab accusantium fugit id laudantium nobis provident quae sit veritatis? Dignissimos facere fuga fugit in laboriosam, nisi non tempore?</p>
+        </div>
+        <div class="footer_text2">
+          <h3>Lorem, ipsum dolor</h3>
+          <ul>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem, ipsum dolor</li>
+            <li>Lorem, ipsum dolor</li>
+          </ul>
+        </div>
+          <div class="footer_text3">
+            <h3>Lorem, ipsum dolor.</h3>
+            <div class="footer_form">
+            <input class="footer_input" type="text">
+            <input class="footer_submit btn" type="submit" value="Lorem">
+            </div>
+            <div class="footer_socialmedia">
+              <a href="https://www.facebook.com" target="_blank"></a>
+              <a href="https://www.instagram.com" target="_blank"></a>
+              <a href="https://www.twitter.com" target="_blank"></a>
+          </div>
+        </div>
+        </div>
+      <div class="footer_copyright">
+          <div>Copyright</div>
+        <a href="index.html" class="footer_webpage">ZaplanujJedzonko.pl</a>
+
+        </div>
+
     </footer>
 
     <script src="./js/index.js"></script>
