--- a/development/app.html
+++ b/development/app.html
@@ -1,17 +1,56 @@
-<!DOCTYPE html>
-<html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Zaplanuj Jedzonko</title>
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Hello App!</h1>
-    </header>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Zaplanuj jedzonko</title>
 
-    <script src="./js/app.js"></script>
-  </body>
+  <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap"
+        rel="stylesheet">
+  <link rel="stylesheet" href="./css/app/app.css">
+  <script src="https://kit.fontawesome.com/2d58b80701.js" crossorigin="anonymous"></script>
+
+</head>
+<body>
+
+<div class="main-container">
+
+  <div class="header-container">
+    <header>
+      <h2>Zaplanuj </h2>
+
+      <section class="profile">
+        <div class="name">{name}</div>
+        <i class="fas fa-user-circle"></i>
+      </section>
+    </header>
+  </div>
+
+  <div class="mid-container">
+    <div class="aside-container">
+      <aside>
+        <nav>
+          <ul class="nav-list">
+            <li data-name="desktop"><a href="#">Pulpit</a></li>
+            <li data-name="recipes"><a href="#">Przepisy</a></li>
+            <li data-name="plans"><a href="#">Plany</a></li>
+          </ul>
+        </nav>
+      </aside>
+    </div>
+
+    <!-------------------------------------------------->
+    <!--tu wrzucać wszystko-->
+    <div class="main-content">
+      <div class="desktop"></div>
+      <div class="recipes"></div>
+      <div class="plans"></div>
+    </div>
+    <!--------------------------------------------->
+  </div>
+</div>
+<script src="./js/app.js"></script>
+</body>
 </html>
