--- a/development/index.html
+++ b/development/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>ZaplanujJedzonko.pl</h1>
+      <h1><a href="app.html">ZaplanujJedzonko.pl</a></h1>
     </header>
     <section>
       <!-- carousel -->
