calltoaction,newsletter,footer done

--- a/development/index.html
+++ b/development/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Zaplanuj Jedzonko</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <script src="https://kit.fontawesome.com/2d58b80701.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -53,7 +54,7 @@
           <h3>Lorem, ipsum dolor</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quod, sunt! Ab accusantium fugit id laudantium nobis provident quae sit veritatis? Dignissimos facere fuga fugit in laboriosam, nisi non tempore?</p>
         </div>
-        <div class="footer_text2">
+        <div class="footer_text">
           <h3>Lorem, ipsum dolor</h3>
           <ul>
             <li>Lorem, ipsum dolor</li>
@@ -62,16 +63,16 @@
             <li>Lorem, ipsum dolor</li>
           </ul>
         </div>
-          <div class="footer_text3">
-            <h3>Lorem, ipsum dolor.</h3>
+          <div class="footer_text">
+            <h3>Lorem, ipsum dolor</h3>
             <div class="footer_form">
             <input class="footer_input" type="text">
             <input class="footer_submit btn" type="submit" value="Lorem">
             </div>
             <div class="footer_socialmedia">
-              <a href="https://www.facebook.com" target="_blank"></a>
-              <a href="https://www.instagram.com" target="_blank"></a>
-              <a href="https://www.twitter.com" target="_blank"></a>
+              <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
           </div>
         </div>
         </div>
