--- a/development/index.html
+++ b/development/index.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Zaplanuj Jedzonko</title>
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
-  <body>
-    <header>
-      <h1>ZaplanujJedzonko.pl</h1>
-    </header>
-    <section>
-      <!-- carousel -->
-    </section>
-    <section>
-      <!-- CTA + button -->
-    </section>
-    <section>
-      <!-- features -->
-    </section>
-    <section>
-      <!-- newsletter -->
-    </section>
-    <section>
-      <!-- aobut me -->
-    </section>
-    <section>
-      <!-- three columns -->
-    </section>
-    <footer>
-      <!-- copyright -->
-    </footer>
+    <link rel="stylesheet" href="./css/main.css"/>
+</head>
+<body>
+<header class="header">
+    <div class="header__container container">
+        <h1 href="#" class="logo">Zaplanuj <span>Jedzonko</span></h1>
+        <nav>
+            <ul class="header__nav">
+                <li class="nav__element"><a href="#why-us" class="nav__link">Zaplanuj Posiłki</a></li>
+                <li class="nav__element"><a href="#benefits" class="nav__link">Dlaczego Warto</a></li>
+                <li class="nav__element"><a href="#prices" class="nav__link">O mnnie</a></li>
+                <li class="nav__element"><a href="#contact" class="nav__link">Kontakt</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-    <script src="./js/index.js"></script>
-  </body>
+<section>
+    <!-- carousel -->
+</section>
+<section>
+    <!-- CTA + button -->
+</section>
+<section>
+    <!-- features -->
+</section>
+<section>
+    <!-- newsletter -->
+</section>
+<section>
+    <!-- aobut me -->
+</section>
+<section>
+    <!-- three columns -->
+</section>
+<footer>
+    <!-- copyright -->
+</footer>
+
+<script src="./js/index.js"></script>
+</body>
 </html>
