--- a/development/index.html
+++ b/development/index.html
@@ -1,38 +1,73 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Zaplanuj Jedzonko</title>
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
-  <body>
-    <header>
-      <h1>ZaplanujJedzonko.pl</h1>
-    </header>
-    <section>
-      <!-- carousel -->
-    </section>
-    <section>
-      <!-- CTA + button -->
-    </section>
-    <section>
-      <!-- features -->
-    </section>
-    <section>
-      <!-- newsletter -->
-    </section>
-    <section>
-      <!-- aobut me -->
-    </section>
-    <section>
-      <!-- three columns -->
-    </section>
-    <footer>
-      <!-- copyright -->
-    </footer>
+    <link rel="stylesheet" href="./css/main.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+</head>
+<body>
+<header>
+    <h1>ZaplanujJedzonko.pl</h1>
+</header>
+<section>
+    <!-- carousel -->
+</section>
+<section>
+    <!-- CTA + button -->
+</section>
+<section class="features-content">
+    <div class="container">
+        <article class="features-article">
+            <i class="fas fa-check"></i>
+            <h3 class="features-title">Lorem ipsum dolor sit.</h3>
+            <p class="features-text">
+                Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </article>
+      <article class="features-article">
+         <i class="far fa-clock"></i>
+        <h3 class="features-title">Lorem ipsum dolor sit.</h3>
+        <p class="features-text">
+          Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </article>
+      <article class="features-article">
+         <i class="fas fa-list"></i>
+        <h3 class="features-title">Lorem ipsum dolor sit.</h3>
+        <p class="features-text">
+          Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </article>
+    </div>
+</section>
+    <!-- features -->
 
-    <script src="./js/index.js"></script>
-  </body>
+
+<section>
+    <!-- newsletter -->
+</section>
+<section>
+    <!-- aobut me -->
+</section>
+<section>
+    <!-- three columns -->
+</section>
+<footer>
+    <!-- copyright -->
+</footer>
+
+<script src="./js/index.js"></script>
+</body>
 </html>
