--- a/development/index.html
+++ b/development/index.html
@@ -8,15 +8,20 @@
     <link rel="stylesheet" href="./css/main.css"/>
 </head>
 <body>
-<header class="header">
-    <div class="header__container container">
-        <h1 href="#" class="logo">Zaplanuj <span>Jedzonko</span></h1>
-        <nav>
-            <ul class="header__nav">
-                <li class="nav__element"><a href="#why-us" class="nav__link">Zaplanuj Posiłki</a></li>
-                <li class="nav__element"><a href="#benefits" class="nav__link">Dlaczego Warto</a></li>
-                <li class="nav__element"><a href="#prices" class="nav__link">O mnnie</a></li>
-                <li class="nav__element"><a href="#contact" class="nav__link">Kontakt</a></li>
+<header>
+    <div class="container">
+        <div href="" class="page-logo">
+            <h1>
+                <span id="first">Zaplanuj</span>
+                <span id="second">Jedzonko</span>
+            </h1>
+        </div>
+        <nav class="page-nav">
+            <ul class="page-nav-list">
+                <li class="nav__element"><a href="#why-us" class="nav__link">ZAPLANUJ POSIŁKI</a></li>
+                <li class="nav__element"><a href="#benefits" class="nav__link">DLACZEGO WARTO</a></li>
+                <li class="nav__element"><a href="#prices" class="nav__link">O MNIE</a></li>
+                <li class="nav__element"><a href="#contact" class="nav__link">KONTAKT</a></li>
             </ul>
         </nav>
     </div>
