--- a/development/index.html
+++ b/development/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-    <div class="container">
+    <div class="header_container">
         <div href="" class="page-logo">
             <h1>
                 <span id="first">Zaplanuj</span>
