--- a/development/app.html
+++ b/development/app.html
@@ -1,55 +1,71 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Zaplanuj jedzonko</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Zaplanuj jedzonko</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap"
-        rel="stylesheet">
-  <link rel="stylesheet" href="./css/app/app.css">
-  <script src="https://kit.fontawesome.com/2d58b80701.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="./css/app/app.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/2d58b80701.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
 
 <div class="main-container">
 
-  <div class="header-container">
-    <header>
-      <h2>Zaplanuj </h2>
+    <div class="header-container">
+        <header>
+            <h2>Zaplanuj </h2>
 
-      <section class="profile">
-        <div class="name">{name}</div>
-        <i class="fas fa-user-circle"></i>
-      </section>
-    </header>
-  </div>
-
-  <div class="mid-container">
-    <div class="aside-container">
-      <aside>
-        <nav>
-          <ul class="nav-list">
-            <li data-name="desktop"><a href="#">Pulpit</a></li>
-            <li data-name="recipes"><a href="#">Przepisy</a></li>
-            <li data-name="plans"><a href="#">Plany</a></li>
-          </ul>
-        </nav>
-      </aside>
+            <section class="profile">
+                <div class="name">{name}</div>
+                <i class="fas fa-user-circle"></i>
+            </section>
+        </header>
     </div>
 
-    <!-------------------------------------------------->
-    <!--tu wrzucać wszystko-->
-    <div class="main-content">
-      <div class="desktop"></div>
-      <div class="recipes"></div>
-      <div class="plans"></div>
+    <div class="mid-container">
+        <div class="aside-container">
+            <aside>
+                <nav>
+                    <ul class="nav-list">
+                        <li data-name="desktop"><a href="#">Pulpit</a></li>
+                        <li data-name="recipes"><a href="#">Przepisy</a></li>
+                        <li data-name="plans"><a href="#">Plany</a></li>
+                    </ul>
+                </nav>
+            </aside>
+        </div>
+
+        <!-------------------------------------------------->
+        <!--tu wrzucać wszystko-->
+        <div class="main-content">
+            <div class="desktop">
+                <form>
+                    <h1> Witaj,</h1>
+                    <h2>wygląda na to, iż jesteś tutaj pierwszy raz</h2>
+                    <div class="form-group">
+                        <label for="exampleInputName">Wpisz swoje imię</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                            else.</small>
+                    </div>
+                  
+                    <button type="submit" class="btn btn-primary">Gotowe</button>
+                </form>
+
+            </div>
+            <div class="recipes"></div>
+            <div class="plans"></div>
+        </div>
+        <!--------------------------------------------->
     </div>
-    <!--------------------------------------------->
-  </div>
 </div>
 <script src="./js/app.js"></script>
 </body>
