--- a/development/index.html
+++ b/development/index.html
@@ -1,89 +1,106 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Zaplanuj Jedzonko</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css"/>
     <script src="https://kit.fontawesome.com/2d58b80701.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <header>
-      <h1><a href="app.html">ZaplanujJedzonko.pl</a></h1>
-    </header>
-    <section>
-      <!-- carousel -->
-    </section>
-    <section>
-      <!-- CTA + button -->
-      <div class="call_container">
+</head>
+<body>
+<header>
+    <h1><a href="app.html">ZaplanujJedzonko.pl</a></h1>
+</header>
+<section>
+    <!-- carousel -->
+</section>
+<section>
+    <!-- CTA + button -->
+    <div class="call_container">
         <div class="call_text">
-          <h3>Lorem ipsum dolor sit amet</h3>
-          <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         </div>
         <div class="call_click">
-          <a href="index.html" class="btn">Lorem ipsum</a>
+            <a href="index.html" class="btn">Lorem ipsum</a>
         </div>
-      </div>
-    </section>
-    <section>
-      <!-- features -->
-    </section>
-    <section>
-      <!-- newsletter -->
+    </div>
+</section>
+<section>
+    <!-- features -->
+</section>
+<section>
+    <!-- newsletter -->
 
-      <div class="newsletter">
+    <div class="newsletter">
         <h3 class="newstext">Lorem ipsum dolor sit amet</h3>
         <form action="submit">
-          <input type="text" value="">
-          <input class="btn" type="submit" value="lorem">
+            <input type="text" value="">
+            <input class="btn" type="submit" value="lorem">
         </form>
-      </div>
-    </section>
-    <section>
-      <!-- aobut me -->
-    </section>
-    <section>
-      <!-- three columns -->
-    </section>
-    <footer>
-      <!-- copyright -->
-      <div class="footer_container">
+    </div>
+</section>
+<section>
+    <!-- aobut me -->
+    <div class="benefits__container container">
+        <div class="benefits__image">
+            <img src="./images/iPhone.png"/>
+        </div>
+        <div class="benefits__text">
+            <h3 class="benefits__title">Your shop is<br>where you are!</h3>
+            <p class="benefits__description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam.
+            </p>
+        </div>
+
+
+    </div>
+</section>
+<section>
+    <!-- three columns -->
+</section>
+<footer>
+    <!-- copyright -->
+    <div class="footer_container">
         <div class="footer_text">
-          <h3>Lorem, ipsum dolor</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quod, sunt! Ab accusantium fugit id laudantium nobis provident quae sit veritatis? Dignissimos facere fuga fugit in laboriosam, nisi non tempore?</p>
+            <h3>Lorem, ipsum dolor</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium quod, sunt! Ab accusantium fugit id
+                laudantium nobis provident quae sit veritatis? Dignissimos facere fuga fugit in laboriosam, nisi non
+                tempore?</p>
         </div>
         <div class="footer_text">
-          <h3>Lorem, ipsum dolor</h3>
-          <ul>
-            <li>Lorem, ipsum dolor</li>
-            <li>Lorem, ipsum dolor</li>
-            <li>Lorem, ipsum dolor</li>
-            <li>Lorem, ipsum dolor</li>
-          </ul>
+            <h3>Lorem, ipsum dolor</h3>
+            <ul>
+                <li>Lorem, ipsum dolor</li>
+                <li>Lorem, ipsum dolor</li>
+                <li>Lorem, ipsum dolor</li>
+                <li>Lorem, ipsum dolor</li>
+            </ul>
         </div>
-          <div class="footer_text">
+        <div class="footer_text">
             <h3>Lorem, ipsum dolor</h3>
             <div class="footer_form">
-            <input class="footer_input" type="text">
-            <input class="footer_submit btn" type="submit" value="Lorem">
+                <input class="footer_input" type="text">
+                <input class="footer_submit btn" type="submit" value="Lorem">
             </div>
             <div class="footer_socialmedia">
-              <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-              <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-          </div>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
         </div>
-        </div>
-      <div class="footer_copyright">
-          <div>Copyright</div>
+    </div>
+    <div class="footer_copyright">
+        <div>Copyright</div>
         <a href="index.html" class="footer_webpage">ZaplanujJedzonko.pl</a>
 
-        </div>
+    </div>
 
-    </footer>
+</footer>
 
-    <script src="./js/index.js"></script>
-  </body>
+<script src="./js/index.js"></script>
+</body>
 </html>
