--- a/development/index.html
+++ b/development/index.html
@@ -38,7 +38,7 @@
           <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
         </div>
         <div class="call_click">
-          <a href="index.html" class="btn">Lorem ipsum</a>
+          <a href="app.html" class="btn">Lorem ipsum</a>
         </div>
       </div>
     </section>
