--- a/development/index.html
+++ b/development/index.html
@@ -9,6 +9,7 @@
    <script src="https://kit.fontawesome.com/2d58b80701.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="application-container">
 <header>
     <div class="header_container">
         <div href="" class="page-logo">
@@ -132,6 +133,7 @@
     </footer>
 
 </section>
+</div>
 <script src="./js/index.js"></script>
 </body>
 </html>
