--- a/development/index.html
+++ b/development/index.html
@@ -43,13 +43,13 @@
 </section>
 <section>
     <!-- aobut me -->
-    <div class="benefits__container container">
-        <div class="benefits__image">
-            <img src="./images/iPhone.png"/>
+    <div class="about__container container">
+        <div class="about__image">
+<!--            <img src=""/>-->
         </div>
-        <div class="benefits__text">
-            <h3 class="benefits__title">Your shop is<br>where you are!</h3>
-            <p class="benefits__description">
+        <div class="about__text">
+            <h3 class="about__title">Lorem ipsum dolor sit amet.</h3>
+            <p class="about__description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam.
