--- a/development/app.html
+++ b/development/app.html
@@ -50,19 +50,83 @@
 
             <div class="desktop">
                 <div class="main-content-centered">
+                    <div class="main-content-centered-container">
 
-                    <!--Widżet powiadomień, do upakowania w kontenery-->
-                    <section class="notification-w-container">
-                        <ul class="notification-w-list">
-                            <li class="notification-w-info"><i class="widget-icon fas fa-info-circle"></i>Masz X
-                                przepisów <i class="widget-icon widget-close fas fa-window-close"></i></li>
-                            <li class="notification-w-warning"><i class="widget-icon fas fa-exclamation-circle"></i>Masz
-                                X warning <i class="widget-icon widget-close fas fa-window-close"></i></li>
-                            <li class="notification-w-success"><i class="widget-icon fas fa-check-circle"></i>Masz X
-                                success <i class="widget-icon widget-close fas fa-window-close"></i></li>
-                        </ul>
-                    </section>
+                        <div class="section-new-recipe-container">
+                            <section class="new-recipe-layout">
+                                <div class="new-recipe-header-container">
+                                    <h3>Nowy przepis</h3>
+                                    <button class="save-quit">Zapisz i zamknij</button>
+                                </div>
+                                <div class="new-recipe-form-container">
+                                    <form class="add-recipe-form" id="addform">
+                                        <div class="name-container">
+                                            <label>Nazwa przepisu</label>
+                                            <input type="text" class="add-recipe-form-name">
+                                        </div>
+                                        <div class="description-container">
+                                            <label>Opis przepisu</label>
+                                            <textarea name="description" form="addform" rows="3"></textarea></label>
+                                        </div>
+                                    </form>
+                                    <div class="recipes-instructions-container">
+                                        <div class="new-recipe-instructions-container">
+                                            <h2>Instrukcje</h2>
+                                            <div class="new-recipe-instructions-input">
+                                                <label><textarea rows="3"></textarea></label>
+                                                <i class="fas fa-plus-square"></i>
+                                            </div>
+                                            <div class="new-recipe-instructions-output">
+                                                <ol class="new-recipe-instructions-list">
+                                                    <li>test</li>
+                                                    <!--WYWALIĆ TESTOWE LI, PODPINAĆ NOWE LI PRZY POMOCY JS-->
+                                                </ol>
+                                            </div>
+                                        </div>
 
+                                        <div class="new-recipe-ingredients-container">
+                                            <h2>Składniki</h2>
+                                            <div class="new-recipe-ingredients-input">
+                                                <label><textarea rows="3"></textarea></label>
+                                                <i class="fas fa-plus-square"></i>
+                                            </div>
+                                            <div class="new-recipe-ingredients-output">
+                                                <ul class="new-recipe-ingredients-list">
+                                                    <li>test</li>
+
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+
+                        <div class="widgets">
+
+                            <article class="add-w-button add-w-recipe">
+                                <i class="add-button far fa-plus-square"></i>
+                                <h2 class="add-w-recipe-label">dodaj przepis</h2>
+                            </article>
+                            <article class="add-w-button add-w-plan">
+                                <i class="add-button far fa-plus-square"></i>
+                                <h2 class="add-w-plan-label">dodaj plan</h2>
+                            </article>
+
+
+                        <!--Widżet powiadomień, do upakowania w kontenery-->
+                        <section class="notification-w-container">
+                            <ul class="notification-w-list">
+                                <li class="notification-w-info"><i class="widget-icon fas fa-info-circle"></i>Masz X
+                                    przepisów <i class="widget-icon widget-close fas fa-window-close"></i></li>
+                                <li class="notification-w-warning"><i class="widget-icon fas fa-exclamation-circle"></i>Masz
+                                    X warning <i class="widget-icon widget-close fas fa-window-close"></i></li>
+                                <li class="notification-w-success"><i class="widget-icon fas fa-check-circle"></i>Masz X
+                                    success <i class="widget-icon widget-close fas fa-window-close"></i></li>
+                            </ul>
+                        </section>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -71,62 +135,12 @@
                 <div class="main-content-centered">
 
                     <!--Nowy przepis! docelowo do wrzucenia do jakiegoś containera z contentem-->
-                    <div class="section-new-recipe-container">
-                        <section class="new-recipe-layout">
-                            <div class="new-recipe-header-container">
-                                <h3>Nowy przepis</h3>
-                                <button class="save-quit">Zapisz i zamknij</button>
-                            </div>
-                            <div class="new-recipe-form-container">
-                                <form class="add-recipe-form" id="addform">
-                                    <div class="name-container">
-                                        <label>Nazwa przepisu</label>
-                                        <input type="text" class="add-recipe-form-name">
-                                    </div>
-                                    <div class="description-container">
-                                        <label>Opis przepisu</label>
-                                        <textarea name="description" form="addform" rows="3"></textarea></label>
-                                    </div>
-                                </form>
-                                <div class="recipes-instructions-container">
-                                    <div class="new-recipe-instructions-container">
-                                        <h2>Instrukcje</h2>
-                                        <div class="new-recipe-instructions-input">
-                                            <label><textarea rows="3"></textarea></label>
-                                            <i class="fas fa-plus-square"></i>
-                                        </div>
-                                        <div class="new-recipe-instructions-output">
-                                            <ol class="new-recipe-instructions-list">
-                                                <li>test</li>
-                                                <!--WYWALIĆ TESTOWE LI, PODPINAĆ NOWE LI PRZY POMOCY JS-->
-                                            </ol>
-                                        </div>
-                                    </div>
 
-                                    <div class="new-recipe-ingredients-container">
-                                        <h2>Składniki</h2>
-                                        <div class="new-recipe-ingredients-input">
-                                            <label><textarea rows="3"></textarea></label>
-                                            <i class="fas fa-plus-square"></i>
-                                        </div>
-                                        <div class="new-recipe-ingredients-output">
-                                            <ul class="new-recipe-ingredients-list">
-                                                <li>test</li>
-
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
-                    </div>
                 </div>
             </div>
-            <div class="plans"> <div class="main-content-centered"></div>
-        </div>
-
-
-
+            <div class="plans">
+                <div class="main-content-centered"></div>
+            </div>
 
 
         </div>
