--- a/development/index.html
+++ b/development/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <div class="application-container">
-<header>
+<header class="header">
     <div class="header_container">
         <div href="" class="page-logo">
             <h1>
-                <span id="first">Zaplanuj</span><a href="app.html"></a>
+               <span id="first" >Zaplanuj</span>
                 <span id="second">Jedzonko</span>
             </h1>
         </div>
