--- a/development/index.html
+++ b/development/index.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section>
+<section class="calltoaction">
     <!-- CTA + button -->
     <div class="call_container">
         <div class="call_text">
