--- a/development/index.html
+++ b/development/index.html
@@ -95,10 +95,10 @@
         </article>
     </div>
 </section>
-<section>
+<section class="newsletter">
     <!-- newsletter -->
 
-    <div class="newsletter">
+    <div class="newsletter_container">
         <h3 class="newstext">Lorem ipsum dolor sit amet</h3>
         <form action="submit">
             <input type="text" value="">
