--- a/development/index.html
+++ b/development/index.html
@@ -112,7 +112,7 @@
 <section>
     <!-- three columns -->
 </section>
-<footer>
+<footer class="footer">
     <!-- copyright -->
     <div class="footer_container">
         <div class="footer_text">
