add:saving logic, bugs:dblclick to hide popup,reversed indexes

--- a/development/app.html
+++ b/development/app.html
@@ -66,36 +66,34 @@
                                         </div>
                                         <div class="description-container">
                                             <label>Opis przepisu</label>
-                                            <textarea name="description" form="addform" rows="3"></textarea></label>
+                                            <textarea class ="add-recipe-form-description" name="description" form="addform" rows="3"></textarea></label>
                                         </div>
                                     </form>
                                     <div class="recipes-instructions-container">
                                         <div class="new-recipe-instructions-container">
                                             <h2>Instrukcje</h2>
                                             <div class="new-recipe-instructions-input">
-                                                <label><textarea rows="3"></textarea></label>
-                                                <i class="fas fa-plus-square"></i>
+                                                <label class="instructions-label"><textarea class="instructions-area" rows="3" cols="25"></textarea></label>
+                                                <i class="add-ins-button fas fa-plus-square"></i>
                                             </div>
-                                            <div class="new-recipe-instructions-output">
+
                                                 <ol class="new-recipe-instructions-list">
-                                                    <li>test</li>
                                                     <!--WYWALIĆ TESTOWE LI, PODPINAĆ NOWE LI PRZY POMOCY JS-->
                                                 </ol>
-                                            </div>
+
                                         </div>
 
                                         <div class="new-recipe-ingredients-container">
                                             <h2>Składniki</h2>
                                             <div class="new-recipe-ingredients-input">
-                                                <label><textarea rows="3"></textarea></label>
-                                                <i class="fas fa-plus-square"></i>
+                                                <label class="ingredients-label"><textarea class="ingredients-area" rows="3" cols="25"></textarea></label>
+                                                <i class="add-ing-button fas fa-plus-square"></i>
                                             </div>
-                                            <div class="new-recipe-ingredients-output">
+
                                                 <ul class="new-recipe-ingredients-list">
-                                                    <li>test</li>
 
                                                 </ul>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
