add:plan field, change:notification display

--- a/development/app.html
+++ b/development/app.html
@@ -66,40 +66,45 @@
                                         </div>
                                         <div class="description-container">
                                             <label>Opis przepisu</label>
-                                            <textarea class ="add-recipe-form-description" name="description" form="addform" rows="3"></textarea></label>
+                                            <textarea class="add-recipe-form-description" name="description"
+                                                      form="addform" rows="3"></textarea></label>
                                         </div>
                                     </form>
                                     <div class="recipes-instructions-container">
                                         <div class="new-recipe-instructions-container">
                                             <h2>Instrukcje</h2>
                                             <div class="new-recipe-instructions-input">
-                                                <label class="instructions-label"><textarea class="instructions-area" rows="3" cols="25"></textarea></label>
+                                                <label class="instructions-label"><textarea class="instructions-area"
+                                                                                            rows="3"
+                                                                                            cols="25"></textarea></label>
                                                 <i class="add-ins-button fas fa-plus-square"></i>
                                             </div>
 
-                                                <ol class="new-recipe-instructions-list">
-                                                    <!--WYWALIĆ TESTOWE LI, PODPINAĆ NOWE LI PRZY POMOCY JS-->
-                                                </ol>
+                                            <ol class="new-recipe-instructions-list">
+                                                <!--WYWALIĆ TESTOWE LI, PODPINAĆ NOWE LI PRZY POMOCY JS-->
+                                            </ol>
 
                                         </div>
 
                                         <div class="new-recipe-ingredients-container">
                                             <h2>Składniki</h2>
                                             <div class="new-recipe-ingredients-input">
-                                                <label class="ingredients-label"><textarea class="ingredients-area" rows="3" cols="25"></textarea></label>
+                                                <label class="ingredients-label"><textarea class="ingredients-area"
+                                                                                           rows="3"
+                                                                                           cols="25"></textarea></label>
                                                 <i class="add-ing-button fas fa-plus-square"></i>
                                             </div>
 
-                                                <ul class="new-recipe-ingredients-list">
+                                            <ul class="new-recipe-ingredients-list">
 
-                                                </ul>
+                                            </ul>
 
                                         </div>
                                     </div>
                                 </div>
                             </section>
                         </div>
-
+                        <div class="section-new-plan-container"></div>
                         <div class="widgets">
 
                             <article class="add-w-button add-w-recipe">
@@ -112,17 +117,19 @@
                             </article>
 
 
-                        <!--Widżet powiadomień, do upakowania w kontenery-->
-                        <section class="notification-w-container">
-                            <ul class="notification-w-list">
-                                <li class="notification-w-info"><i class="widget-icon fas fa-info-circle"></i>Masz X
-                                    przepisów <i class="widget-icon widget-close fas fa-window-close"></i></li>
-                                <li class="notification-w-warning"><i class="widget-icon fas fa-exclamation-circle"></i>Masz
-                                    X warning <i class="widget-icon widget-close fas fa-window-close"></i></li>
-                                <li class="notification-w-success"><i class="widget-icon fas fa-check-circle"></i>Masz X
-                                    success <i class="widget-icon widget-close fas fa-window-close"></i></li>
-                            </ul>
-                        </section>
+                            <!--Widżet powiadomień, do upakowania w kontenery-->
+                            <section class="notification-w-container">
+                                <ul class="notification-w-list">
+<!--                                    <li class="notification-w notification-w-info"><i class="widget-icon fas fa-info-circle"></i>Masz X-->
+<!--                                        przepisów <i class="widget-icon widget-close fas fa-window-close"></i></li>-->
+<!--                                    <li class="notification-w notification-w-warning"><i-->
+<!--                                            class="widget-icon fas fa-exclamation-circle"></i>Masz-->
+<!--                                        X warning <i class="widget-icon widget-close fas fa-window-close"></i></li>-->
+<!--                                    <li class="notification-w notification-w-success"><i class="widget-icon fas fa-check-circle"></i>Masz-->
+<!--                                        X-->
+<!--                                        success <i class="widget-icon widget-close fas fa-window-close"></i></li>-->
+                                </ul>
+                            </section>
                         </div>
                     </div>
                 </div>
