solved: notification style

--- a/development/app.html
+++ b/development/app.html
@@ -56,7 +56,7 @@
                             <section class="new-recipe-layout">
                                 <div class="new-recipe-header-container">
                                     <h3>Nowy przepis</h3>
-                                    <button class="save-quit">Zapisz i zamknij</button>
+                                    <button type="submit" class="save-quit">Zapisz i zamknij</button>
                                 </div>
                                 <div class="new-recipe-form-container">
                                     <form class="add-recipe-form" id="addform">
